--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.0.0",
     "jest": "^29.0.2",
     "nodemon": "^2.0.19",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.8.2"
   }
 }
